# xiao-nfr52840-async

./: LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
examples/: Cargo.toml
examples/led/: Cargo.toml  README.md  memory.x
examples/led/src/: main.rs
examples/usb_logger/: Cargo.toml  README.md
examples/usb_logger/src/: main.rs
xiao_nrf52840/: Cargo.toml
xiao_nrf52840/src/: board.rs  lib.rs
