[package]
name = "xiao-nfr52840-async-led-example"
version = "0.1.0"
edition = "2021"

[dependencies]
xiao-nrf52840-async = { path = "../../xiao_nrf52840" }

embassy-futures = { version = "0.1.0", default-features = false }
embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "defmt", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}

heapless = "0.7"
cortex-m-rt = "0.7"
static_cell = "1"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
