[package]
name = "xiao-nfr52840-async-usb-logger-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
xiao-nrf52840-async = { path = "../../xiao_nrf52840" }

embassy-futures = { version = "0.1.0", default-features = false }
embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "defmt", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
embassy-usb-logger = { version = "0.1.0" }


heapless = "0.7"
cortex-m-rt = "0.7"
static_cell = "1"

log = "0.4"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
